Updates for readability

--- a/visualize_raw_data.ipynb
+++ b/visualize_raw_data.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d5e425b",
    "metadata": {},
    "source": [
     "# Visualize Raw Fiber Photometry Data\n",
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bfb4a36e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +29,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3da0a91",
    "metadata": {},
    "source": [
     "## Visualize single channel recordings"
@@ -40,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "14dce8ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,21 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a705db18",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "f7ead6ce0e9b420da44b4a81dcbac933",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Experiment:', options=(('Day 1 Animal 1', PosixPath('/home/matt/re…"
+       "interactive(children=(Dropdown(description='Experiment:', options=(('Day 1 Animal 1', WindowsPath('J:/Alja Pod…"
       ]
      },
      "metadata": {},
@@ -95,7 +88,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6aa3f5a",
    "metadata": {},
    "source": [
     "## Visualize two channel recordings"
@@ -103,8 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e6408c8f",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,19 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6f42ed1d",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d04477977fa4ce9aad5908ed21e29c8",
+       "model_id": "75218bf901704a6f8d5d8c4091442418",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Experiment:', options=(('Animal 1', PosixPath('/home/matt/repos/fi…"
+       "interactive(children=(Dropdown(description='Experiment:', options=(), value=None), Output()), _dom_classes=('w…"
       ]
      },
      "metadata": {},
@@ -167,7 +157,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c82405e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -189,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
