--- a/visualize_raw_data.ipynb
+++ b/visualize_raw_data.ipynb
@@ -53,12 +53,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7ead6ce0e9b420da44b4a81dcbac933",
+       "model_id": "1bd19d54cca04ad49d13264bde1b0764",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Experiment:', options=(('Day 1 Animal 1', WindowsPath('J:/Alja Pod…"
+       "interactive(children=(Dropdown(description='Experiment:', options=(('Day 1 Animal 1', WindowsPath(\"J:/Alja Pod…"
       ]
      },
      "metadata": {},
