Refactor Jupyter Notebooks

--- a/scripts/Visualize Raw Data.ipynb
+++ b/scripts/Visualize Raw Data.ipynb
@@ -24,8 +24,8 @@
     "from ipywidgets import interact\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "import functions_io as fio\n",
-    "import functions_plotting as fp\n",
+    "import fp.io as f_io\n",
+    "import fp.plotting as fp_plot\n",
     "import paths"
    ]
   },
@@ -74,15 +74,15 @@
     "@interact(file=widgets.Dropdown(options=sc_file_shorthand, description='Experiment:'))\n",
     "def plot_sc_experiment(file):\n",
     "    \n",
-    "    data = fio.read_1_channel_fiber_photometry_csv(file.resolve())\n",
+    "    data = f_io.read_1_channel_fiber_photometry_csv(file.resolve())\n",
     "    \n",
     "    fig, (ax1, ax2) = plt.subplots(nrows=2, sharex=True, figsize=(9,5))\n",
     "    \n",
-    "    ax1 = fp.plot_fluorescence_min_sec(data['time'], data['gcamp'], ax=ax1)\n",
+    "    ax1 = fp_plot.plot_fluorescence_min_sec(data['time'], data['gcamp'], ax=ax1)\n",
     "    ax1.set_title('Raw GCaMP')\n",
     "    ax1.set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
-    "    ax2 = fp.plot_fluorescence_min_sec(data['time'], data['auto'], ax=ax2)\n",
+    "    ax2 = fp_plot.plot_fluorescence_min_sec(data['time'], data['auto'], ax=ax2)\n",
     "    ax2.set_title('Raw Auto')\n",
     "    ax2.set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
@@ -136,23 +136,23 @@
     "@interact(file=widgets.Dropdown(options=dc_file_shorthand, description='Experiment:'))\n",
     "def plot_dc_experiment(file):\n",
     "    \n",
-    "    data = fio.read_2_channel_fiber_photometry_csv(file.resolve())\n",
+    "    data = f_io.read_2_channel_fiber_photometry_csv(file.resolve())\n",
     "    \n",
     "    fig, axes = plt.subplots(nrows=2, ncols=2, sharex=True, figsize=(9,5))\n",
     "    \n",
-    "    axes[0][0] = fp.plot_fluorescence_min_sec(data['time'], data['gcamp_anterior'], ax=axes[0][0])\n",
+    "    axes[0][0] = fp_plot.plot_fluorescence_min_sec(data['time'], data['gcamp_anterior'], ax=axes[0][0])\n",
     "    axes[0][0].set_title('Raw GCaMP - Anterior')\n",
     "    axes[0][0].set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
-    "    axes[1][0] = fp.plot_fluorescence_min_sec(data['time'], data['auto_anterior'], ax=axes[1][0])\n",
+    "    axes[1][0] = fp_plot.plot_fluorescence_min_sec(data['time'], data['auto_anterior'], ax=axes[1][0])\n",
     "    axes[1][0].set_title('Raw Auto - Anterior')\n",
     "    axes[1][0].set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
-    "    axes[0][1] = fp.plot_fluorescence_min_sec(data['time'], data['gcamp_posterior'], ax=axes[0][1])\n",
+    "    axes[0][1] = fp_plot.plot_fluorescence_min_sec(data['time'], data['gcamp_posterior'], ax=axes[0][1])\n",
     "    axes[0][1].set_title('Raw GCaMP - Posterior')\n",
     "    axes[0][1].set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
-    "    axes[1][1] = fp.plot_fluorescence_min_sec(data['time'], data['auto_posterior'], ax=axes[1][1])\n",
+    "    axes[1][1] = fp_plot.plot_fluorescence_min_sec(data['time'], data['auto_posterior'], ax=axes[1][1])\n",
     "    axes[1][1].set_title('Raw Auto - Posterior')\n",
     "    axes[1][1].set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
