--- a/notebooks/Preprocessing Visualization.ipynb
+++ b/notebooks/Preprocessing Visualization.ipynb
@@ -31,7 +31,7 @@
     "import paths\n",
     "import fp.preprocessing as fpp\n",
     "import fp.io as f_io\n",
-    "import fp.plotting as fp_plot\n",
+    "import fp.visualization as viz\n",
     "from fp.utils import find_zone_and_behavior_episodes, add_episode_data\n",
     "\n",
     "f_io.check_dir_exists(paths.figure_directory)"
@@ -56,10 +56,10 @@
     "def plot_two_traces(time, trace1, trace2, **kwargs):    \n",
     "    fig, axes = plt.subplots(nrows=2, sharex=True, figsize=(9,6), **kwargs)\n",
     "\n",
-    "    axes[0] = fp_plot.plot_fluorescence_min_sec(time, trace1, ax=axes[0])\n",
+    "    axes[0] = viz.plot_fluorescence_min_sec(time, trace1, ax=axes[0])\n",
     "    axes[0].set_ylabel('Fluorescence (AU)')\n",
     "    \n",
-    "    axes[1] = fp_plot.plot_fluorescence_min_sec(time, trace2, ax=axes[1])\n",
+    "    axes[1] = viz.plot_fluorescence_min_sec(time, trace2, ax=axes[1])\n",
     "    axes[1].set_ylabel('Fluorescence (AU)')\n",
     "    axes[1].set_xlabel('Time')\n",
     "\n",
