--- a/notebooks/Visualize Raw Data.ipynb
+++ b/notebooks/Visualize Raw Data.ipynb
@@ -25,7 +25,7 @@
     "import ipywidgets as widgets\n",
     "\n",
     "import fp.io as f_io\n",
-    "import fp.plotting as fp_plot\n",
+    "import fp.visualization as viz\n",
     "import paths"
    ]
   },
@@ -78,11 +78,11 @@
     "    \n",
     "    fig, (ax1, ax2) = plt.subplots(nrows=2, sharex=True, figsize=(9,5))\n",
     "    \n",
-    "    ax1 = fp_plot.plot_fluorescence_min_sec(data['time'], data['gcamp'], ax=ax1)\n",
+    "    ax1 = viz.plot_fluorescence_min_sec(data['time'], data['gcamp'], ax=ax1)\n",
     "    ax1.set_title('Raw GCaMP')\n",
     "    ax1.set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
-    "    ax2 = fp_plot.plot_fluorescence_min_sec(data['time'], data['auto'], ax=ax2)\n",
+    "    ax2 = viz.plot_fluorescence_min_sec(data['time'], data['auto'], ax=ax2)\n",
     "    ax2.set_title('Raw Auto')\n",
     "    ax2.set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
@@ -140,19 +140,19 @@
     "    \n",
     "    fig, axes = plt.subplots(nrows=2, ncols=2, sharex=True, figsize=(9,5))\n",
     "    \n",
-    "    axes[0][0] = fp_plot.plot_fluorescence_min_sec(data['time'], data['gcamp_anterior'], ax=axes[0][0])\n",
+    "    axes[0][0] = viz.plot_fluorescence_min_sec(data['time'], data['gcamp_anterior'], ax=axes[0][0])\n",
     "    axes[0][0].set_title('Raw GCaMP - Anterior')\n",
     "    axes[0][0].set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
-    "    axes[1][0] = fp_plot.plot_fluorescence_min_sec(data['time'], data['auto_anterior'], ax=axes[1][0])\n",
+    "    axes[1][0] = viz.plot_fluorescence_min_sec(data['time'], data['auto_anterior'], ax=axes[1][0])\n",
     "    axes[1][0].set_title('Raw Auto - Anterior')\n",
     "    axes[1][0].set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
-    "    axes[0][1] = fp_plot.plot_fluorescence_min_sec(data['time'], data['gcamp_posterior'], ax=axes[0][1])\n",
+    "    axes[0][1] = viz.plot_fluorescence_min_sec(data['time'], data['gcamp_posterior'], ax=axes[0][1])\n",
     "    axes[0][1].set_title('Raw GCaMP - Posterior')\n",
     "    axes[0][1].set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
-    "    axes[1][1] = fp_plot.plot_fluorescence_min_sec(data['time'], data['auto_posterior'], ax=axes[1][1])\n",
+    "    axes[1][1] = viz.plot_fluorescence_min_sec(data['time'], data['auto_posterior'], ax=axes[1][1])\n",
     "    axes[1][1].set_title('Raw Auto - Posterior')\n",
     "    axes[1][1].set_ylabel('Fluorescence (a.u.)')\n",
     "    \n",
