--- a/notebooks/Preprocessing Visualization.ipynb
+++ b/notebooks/Preprocessing Visualization.ipynb
@@ -17,7 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "%matplotlib notebook\n",
+    "\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
