--- a/notebooks/Visualize Raw Data.ipynb
+++ b/notebooks/Visualize Raw Data.ipynb
@@ -17,7 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "%matplotlib notebook\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
@@ -187,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
